Thu Jul 20 15:07:14 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ruby.h: export classes/modules to implement sandbox.
	  [ruby-core:08283]

Wed Jul 19 19:40:00 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_yield_0): should check args_args before lambda
	  argument check.  [ruby-dev:29029]

Tue Jul 18 23:53:59 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* process.c (rb_f_system): shouldn't block SIGCHLD if it's not
	  exist.

Tue Jul 18 22:10:13 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* process.c (rb_f_system): block SIGCHLD during the process
	  execution, like glibc system(3) does.  [ruby-talk:202361]

Tue Jul 18 23:10:43 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (open_ifs_socket): should not use plain malloc.

	* win32/win32.c (rb_w32_opendir): should not use plain realloc.

Tue Jul 18 18:05:49 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* test/ruby/test_float.rb (TestFloat::test_strtod): update test to
	  conform strtod change.

Tue Jul 18 16:52:29 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (yield_under_i): argument should be passed in avalue
	  form.  [ruby-dev:29044]

Tue Jul 18 15:49:42 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* pack.c (pack_unpack): propagate association array to copied
	  string.  [ruby-core:08223]

	* pack.c (pack_unpack): return referenced string itself if it has
	  same length as specified.  a patch from <nobu at ruby-lang.org>
	  in [ruby-core:08225].

	* pack.c (pack_pack): taint 'p' packed strings.

Tue Jul 18 15:19:07 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* intern.h (st_foreach_safe): fix prototype.

	* node.h (NODE_LMASK): bigger than long on LLP64.

	* missing/vsnprintf.c (BSD__uqtoa): new function to support LLP64.
	  all changes are derived from [ruby-dev:29045]

Tue Jul 18 14:03:02 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/webrick/httpserver.rb (WEBrick::HTTPServer::unmount): remove
	  inpect argument from sprintf.  [ruby-dev:29039]
